2005-04-11  Alexander V. Lukyanov <lav@yars.free.net>

	* SFtp.cc: resume recv_buf in Close, this fixes a rare hang.

2005-04-07  Alexander V. Lukyanov <lav@yars.free.net>

	* SFtp.cc: (SFtpListInfo::Do) check if done first, this fixes
	  looping in SMTask::Roll.

2005-04-06  Alexander V. Lukyanov <lav@yars.free.net>

	* NetAccess.cc: retry with LONG_LIST in case of any error with MP_LIST.
	* MirrorJob.cc: don't let parent mirror act in between our actions;
	  let other tasks run when ListInfo are created, this fixes mirror
	  multitasking when using listings from cache.

2005-04-05  Alexander V. Lukyanov <lav@yars.free.net>

	* MirrorJob.cc, MirrorJob.h: add --loop option.

2005-04-04  Alexander V. Lukyanov <lav@yars.free.net>

	* FileAccess.cc, FileAccess.h, buffer.cc, buffer.h: (SetErrorCached) new method.
	* commands.cc: don't quote lftp -c argument when it is single.
	* FileCopy.cc, Fish.cc, FtpDirList.cc, HttpDir.cc, LsCache.cc, LsCache.h,
	  NetAccess.cc, SFtp.cc: add negative cache support.
	* Http.cc: set use-propfind and use-mkcol when those methods are unsupported.

2005-04-01  Alexander V. Lukyanov <lav@yars.free.net>

	* SFtp.cc: re-request missed data (could happen when file is growing).

2005-03-29  Alexander V. Lukyanov <lav@yars.free.net>

	* HttpDir.cc, HttpDir.h, HttpDirXML.cc: parse invalid XML as html,
	  this works around some servers that return plain index for PROPFIND.

2005-03-28  Alexander V. Lukyanov <lav@yars.free.net>

	* commands.cc: interpret the rest of line after lftp -c as command.
	* Http.cc, HttpDir.cc, HttpDir.h, HttpDirXML.cc: use USE_EXPAT define.

2005-03-24  Alexander V. Lukyanov <lav@yars.free.net>

	* HttpDirXML.cc: fixed coredump when there is no files; added
	  handler for creator-displayname; check parent node for href.

2005-03-13  Alexander V. Lukyanov <lav@yars.free.net>

	* buffer.cc: prevent spinning when disk is full in IOBufferFDStream;
	  better saving of errno.